unpackaged/main/default/objects/Account/fields/Conflict_Field__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Field__c</fullName>
    <label>Conflict Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>