unpackaged/main/default/objects/Account/fields/Test1__c.field-meta.xml
<CustomField>
    <fullName>Test1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>