unpackaged/main/default/objects/Account/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <description>This is a test field.</description>
    <displayFormat>A-{0000}</displayFormat>
    <label>Test Field</label>
    <type>AutoNumber</type>
</CustomField>